--- a/src/Login.css
+++ b/src/Login.css
@@ -14,6 +14,7 @@
 }
 
 .loginScreenButton{
+
     position: fixed;
     right: 20px;
     top: 20px;
@@ -22,6 +23,7 @@
     background-color: #e50914;
     border: none;
     cursor: pointer;
+    
 }
 
 
@@ -35,7 +37,8 @@
     z-index: 1; 
     color:#fff; 
     padding: 20px;
-    
+    left: 0;
+    right: 0;
     
 }
 
